// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog snapshot Dialog: 0 1`] = `
<div
  aria-hidden={true}
  className="dialog"
>
  <div
    className="dialog-content-region"
    role="dialog"
    style={
      Object {
        "height": "300px",
        "width": "500px",
      }
    }
    tabIndex={-1}
  />
</div>
`;

exports[`dialog snapshot Dialog: 1 1`] = `
<div
  aria-hidden={true}
  className="dialog"
>
  <div
    className="dialog-modal-overlay"
    onClick={[Function]}
    role="presentation"
    tabIndex={-1}
  />
  <div
    className="dialog-content-region"
    role="dialog"
    style={
      Object {
        "height": "350px",
        "width": "500px",
      }
    }
    tabIndex={-1}
  />
</div>
`;
